--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dev_dependencies:
   paulonia_error_service: 0.3.0
   paulonia_document_service: ^0.2.0
   image_picker: ^0.8.4+10
+  geoflutterfire: 3.0.0-nullsafety.2
+  diacritic: ^0.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
