--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,18 @@ dependencies:
     sdk: flutter
   catcher: 0.6.6
   cloud_firestore: 1.0.7
+  diacritic: ^0.1.3
   flutter_lints: ^1.0.0
   firebase_auth: 1.0.3
   firebase_storage: 10.0.1
+  geoflutterfire: 3.0.0-nullsafety.1
   google_maps: 6.1.0
   http: ^0.13.4
   image_picker: ^0.8.4+10
   geolocator: ^8.2.0
   paulonia_document_service: ^0.2.0
   paulonia_error_service: 0.3.0
+  paulonia_utils: ^0.3.0
   paulonia_repository: 0.3.1
 
 dev_dependencies:
